--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ScheduleDevelopProject
 
-spring.datasource.url=jdbc:mysql://localhost:3306/schedule1
+spring.datasource.url=url
 spring.datasource.username=id
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
